<resources>
    <string name="app_name">FindAGift</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="no_permission_message">You can not set image without permissions</string>

    <string name="no_image_message">Please select the image</string>
    <string name="empty_fields_message">Please fill all fields</string>
    <string name="create_gift_image_message">Uploading image</string>
    <string name="create_gift_message">Creating gift</string>
    <string name="image_upload_error">Can not upload image, try again</string>
    <string name="create_gift_error">Error during gift creation: %s</string>
    <string name="gift_created_message">Gift was successfully created</string>

    <string name="new_name_hint">Enter a gift name</string>
    <string name="new_description_hint">Enter a gift desrciption</string>
    <string name="new_price_hint">Enter a gift price</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="dash" translatable="false">-</string>

    <string name="auth_email" translatable="false">Email</string>
    <string name="auth_password">Password</string>
    <string name="login_submit">Login</string>
    <string name="register_submit">Register</string>

    <string name="log_in_process">Authorizing…</string>
    <string name="register_process">Registering…</string>

    <string name="target_age">Age</string>

    <string name="event">Event</string>

    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_any">Any</string>

    <string name="event_type_birthday">Birthday</string>
    <string name="event_type_wedding">Wedding</string>
    <string name="event_type_any">Any</string>

    <string name="search_params">Search params</string>
    <string name="search_price">Price</string>
    <string name="menu_find_gift">Find Gift</string>
    <string name="menu_stars">Stars</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Log out</string>

    <string name="empty_list_title">No gifts found</string>
    <string name="empty_starred_description">You have not starred any gifts yet.</string>
    <string name="default_failure_message">Can not perform action. Check your internet connection and try again</string>
    <string name="unstar_success">Gift was removed from stars list</string>
    <string name="star_success">Gift was added to your stars list</string>
    <string name="not_success_default">Something went wrong. Please try again</string>
    <string name="internet_error_title">Can not connect to server</string>
    <string name="internet_error_message">Can not connect to server, check your internet connection and try again.</string>
    <string name="currency_changed">Currency changed</string>
    <string name="new_gift_currency">Preparing…</string>
    <string name="title_find_gift">Find Gift</string>
    <string name="title_starred">Starred Gifts</string>
    <string name="title_settings">Settings</string>
</resources>
