<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_find_gift"
            android:icon="@drawable/ic_gift_24dp"
            android:title="@string/menu_find_gift" />
        <item
            android:id="@+id/nav_stars"
            android:icon="@drawable/ic_star_24dp"
            android:title="@string/menu_stars" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_24dp"
            android:title="@string/menu_about" />
    </group>
    <group>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_24dp"
            android:title="@string/menu_logout" />
    </group>
</menu>