<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="@dimen/cornerRadius"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/new_image"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:background="@color/placeholder_color"
                android:scaleType="center"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_camera" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/new_gift_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="@+id/new_image"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_image"
                app:srcCompat="@drawable/ic_save_white_24dp" />

            <EditText
                android:id="@+id/new_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/new_name_hint"
                android:inputType="textPersonName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_image" />

            <EditText
                android:id="@+id/new_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/new_description_hint"
                android:inputType="textMultiLine"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/new_name"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_name" />

            <EditText
                android:id="@+id/new_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/new_price_hint"
                android:inputType="numberDecimal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/new_description"
                app:layout_constraintRight_toLeftOf="@+id/money_type"
                app:layout_constraintTop_toBottomOf="@+id/new_description" />

            <Spinner
                android:id="@+id/money_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/money_types_values"
                android:maxLength="3"
                app:layout_constraintBottom_toBottomOf="@+id/new_price"
                app:layout_constraintRight_toRightOf="@+id/new_description"
                app:layout_constraintTop_toTopOf="@+id/new_price" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/target_age"
                android:textColor="@color/primary"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/new_min_age"
                app:layout_constraintLeft_toLeftOf="@+id/new_price"
                app:layout_constraintTop_toTopOf="@+id/new_min_age"
                app:layout_constraintVertical_bias="0.571" />

            <EditText
                android:id="@+id/new_min_age"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/min"
                android:inputType="number"
                app:layout_constraintLeft_toRightOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/new_price" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/dash"
                android:textColor="@color/primary_text"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="@+id/new_max_age"
                app:layout_constraintLeft_toRightOf="@+id/new_min_age"
                app:layout_constraintTop_toTopOf="@+id/new_max_age" />

            <EditText
                android:id="@+id/new_max_age"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:hint="@string/max"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="@+id/new_min_age"
                app:layout_constraintLeft_toRightOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/new_min_age"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event"
                android:textColor="@color/primary"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/new_event"
                app:layout_constraintLeft_toLeftOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/new_event" />

            <Spinner
                android:id="@+id/new_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:entries="@array/event_type_values"
                app:layout_constraintLeft_toRightOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/new_min_age" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/primary"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/new_gender"
                app:layout_constraintLeft_toLeftOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="@+id/new_gender" />

            <RadioGroup
                android:id="@+id/new_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/new_event">

                <RadioButton
                    android:id="@+id/gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_male" />

                <RadioButton
                    android:id="@+id/gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/gender_female" />

                <RadioButton
                    android:id="@+id/gender_any"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/gender_any" />
            </RadioGroup>


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</ScrollView>