<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background">

    <ProgressBar
        android:id="@+id/main_progress"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/gifts_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/toggle_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground">


                <ImageView
                    android:id="@+id/expand_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView2"
                    app:srcCompat="@drawable/ic_arrow_down_24dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/search_params"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/slide_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true">

                        <android.support.constraint.Guideline
                            android:id="@+id/guideline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintGuide_percent="0.5" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/search_price"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/primary"
                            android:textSize="15sp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/search_min_price"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginTop="8dp"
                            android:ems="10"
                            android:hint="@string/min"
                            android:inputType="number"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintLeft_toLeftOf="@+id/textView12"
                            app:layout_constraintRight_toLeftOf="@+id/guideline"
                            app:layout_constraintTop_toBottomOf="@+id/textView12" />

                        <EditText
                            android:id="@+id/search_max_price"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="0dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginStart="16dp"
                            android:ems="10"
                            android:hint="@string/max"
                            android:inputType="number"
                            app:layout_constraintBottom_toBottomOf="@+id/search_min_price"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintLeft_toLeftOf="@+id/guideline"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/search_min_price" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/target_age"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/primary"
                            android:textSize="15sp"
                            app:layout_constraintLeft_toLeftOf="@+id/search_min_price"
                            app:layout_constraintTop_toBottomOf="@+id/search_min_price" />

                        <EditText
                            android:id="@+id/age_search"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:ems="10"
                            android:inputType="number"
                            app:layout_constraintLeft_toLeftOf="@+id/textView3"
                            app:layout_constraintTop_toBottomOf="@+id/textView3" />

                        <ImageView
                            android:id="@+id/age_clear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="@+id/age_search"
                            app:layout_constraintLeft_toRightOf="@+id/age_search"
                            app:layout_constraintTop_toTopOf="@+id/age_search"
                            app:layout_constraintVertical_bias="0.5"
                            app:srcCompat="@drawable/ic_clear_24dp" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/gender"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/primary"
                            android:textSize="15sp"
                            app:layout_constraintLeft_toLeftOf="@+id/age_search"
                            app:layout_constraintTop_toBottomOf="@+id/age_search" />

                        <RadioGroup
                            android:id="@+id/gender_search"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:orientation="horizontal"
                            app:layout_constraintLeft_toLeftOf="@+id/textView4"
                            app:layout_constraintTop_toBottomOf="@+id/textView4">

                            <RadioButton
                                android:id="@+id/gender_male"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gender_male" />

                            <RadioButton
                                android:id="@+id/gender_female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="16dp"
                                android:text="@string/gender_female" />

                            <RadioButton
                                android:id="@+id/gender_any"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/gender_any" />
                        </RadioGroup>

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/event"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/primary"
                            android:textSize="15sp"
                            app:layout_constraintLeft_toLeftOf="@+id/gender_search"
                            app:layout_constraintTop_toBottomOf="@+id/gender_search" />

                        <Spinner
                            android:id="@+id/event_search"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:layout_marginTop="8dp"
                            android:entries="@array/event_type_values"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="@+id/textView5"
                            app:layout_constraintTop_toBottomOf="@+id/textView5" />

                    </android.support.constraint.ConstraintLayout>
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/main_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />
        </LinearLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/new_gift_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_add_white_24dp" />

</android.support.design.widget.CoordinatorLayout>