<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F5F7"
    tools:context="com.valentun.findgift.ui.auth.AuthActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F8F9F9">

            <EditText
                android:id="@+id/email"
                android:layout_width="250dp"
                android:layout_height="52dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/auth_email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" />


            <Button
                android:onClick="registerClicked"
                android:id="@+id/register_submit"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginTop="24dp"
                android:text="@string/register_submit"
                app:layout_constraintLeft_toLeftOf="@+id/password"
                app:layout_constraintRight_toRightOf="@+id/password"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <Button
                android:onClick="logInClicked"
                android:id="@+id/login_submit"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/login_submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/register_submit"
                app:layout_constraintRight_toRightOf="@id/register_submit"
                app:layout_constraintTop_toBottomOf="@id/register_submit"
                />

            <EditText
                android:id="@+id/password"
                android:layout_width="250dp"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/auth_password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/primary_text"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@id/email"
                app:layout_constraintRight_toRightOf="@id/email"
                app:layout_constraintTop_toBottomOf="@id/email" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:text="You need to authoriaze first"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintLeft_toLeftOf="parent"
        card_view:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
